--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="public/app.css">
+<link rel="stylesheet" href="/app.css">
 
 <div class="flex-container">
     <div class="container">
