--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-<link rel="stylesheet" href="/app.css">
+<!-- <link rel="stylesheet" href="/app.css"> -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 <div class="flex-container">
     <div class="container">
-        <h1>JOIN US</h1>
-<p class="lead">Enter your email to join
-others on our waitlist. We are 100% not a cult. </p>
-<form method="POST" action="/register">
-    <input type="text" name="email" class="form" placeholder="Enter Your Email">
-    <button>Join Now</button>
-</form>
+        <h1>DIXON RYE SALES AUTOMATION</h1>
+<h2>Hit the button below to see recent sales.</h2>
+<button type="button" class="btn btn-primary">Primary</button>
+
     </div>
 </div>
