--- a/index.html
+++ b/index.html
@@ -2,7 +2,38 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <script>
 function sales(){
-    let orders; 
+var getOrders = {
+  
+  method: 'GET',
+  url: 'https://api.squarespace.com/1.0/commerce/orders',
+  headers:
+    {
+      'Authorization': 'Bearer 63780558-bd3a-44ca-9b54-66cc777abfe7',
+      'Content-Type': 'application/json',
+      'User-Agent': 'Mozilla/5.0'
+    },
+    rejectUnauthorized: false
+};
+
+var getAuth = {
+  
+  method: 'POST',
+  body: qs.stringify({
+   'refresh_token': 'ad801fd268d63e30299c28f257c2bec7d32dd2a8',
+   'client_secret': 'c5e4af85bda04d99e69c8121bb52866407d580e07fba7ca8a7cc2798e63f6aae',
+   'client_id': '1d9252b179e2180935270c3f66ccac118a9f81142c616a5faa886ee6fa3c5422',
+   'grant_type': 'refresh_token',
+ }),
+  headers:
+    {
+      'Content-type': "application/x-www-form-urlencoded"
+    },
+  url: 'https://cloud.merchantos.com/oauth/access_token.php'
+ 
+ 
+ };
+
+let orders; 
 request(getOrders)
  .then(ordersResponse => {
   var orders = JSON.parse(ordersResponse)
@@ -39,9 +70,6 @@ request(getOrders)
 
 
  });
-
-}    
-
 </script>
 
 <div class="flex-container">
